# kvasilloni

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  kvasilloni.ini.example
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  RETARGETING.md
fuzz/: Cargo.toml
fuzz/corpus/decode_stream/: seed_classic_rtr  seed_classic_std  seed_fd_flags
fuzz/corpus/parse_udp/: seed_golden_batch  seed_golden_ext  seed_golden_fd  seed_golden_std
fuzz/fuzz_targets/: decode_stream.rs  parse_udp.rs
reference/c-prototype/: Makefile
reference/c-prototype/src/: canlib32.def  canlib32_shim.c  cannelloni_wire.c  cannelloni_wire.h
reference/c-prototype/test/: selftest.sh  wire_test.cpp
src/: config.rs  lib.rs  transport.rs  wire.rs
test/: canshim_probe.c  selftest.sh
tools/: canbridge.py  ini_merge.py
